[gd_scene load_steps=14 format=3 uid="uid://d1qsv08qiuos3"]

[ext_resource type="Script" path="res://Scenes/Characters/shuriken.gd" id="1_t73l3"]
[ext_resource type="Texture2D" uid="uid://b7cexl146ckh7" path="res://Assets/Items/Shuriken/04.png" id="2_x3eye"]
[ext_resource type="Texture2D" uid="uid://d0fomicxry3kc" path="res://Assets/Main Characters/Desappearing (96x96).png" id="3_sjvg8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a74d5"]
atlas = ExtResource("3_sjvg8")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy228"]
atlas = ExtResource("3_sjvg8")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_41t0g"]
atlas = ExtResource("3_sjvg8")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3jgi"]
atlas = ExtResource("3_sjvg8")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pso7"]
atlas = ExtResource("3_sjvg8")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_75gnp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x3eye")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a74d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy228")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41t0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3jgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pso7")
}],
"loop": false,
"name": &"die",
"speed": 19.0
}]

[sub_resource type="Animation" id="Animation_qs7ed"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShurikenPronta:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2yt1h"]
resource_name = "rotacion"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShurikenPronta:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_142mk"]
_data = {
"RESET": SubResource("Animation_qs7ed"),
"rotacion": SubResource("Animation_2yt1h")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_okhn0"]
radius = 10.0499

[node name="shuriken" type="Node2D"]
script = ExtResource("1_t73l3")

[node name="ShurikenPronta" type="AnimatedSprite2D" parent="."]
position = Vector2(3.8147e-06, 7.62939e-06)
scale = Vector2(0.7, 0.656)
sprite_frames = SubResource("SpriteFrames_75gnp")
animation = &"die"
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_142mk")
}
autoplay = "rotacion"
speed_scale = -3.0

[node name="Area2D" type="Area2D" parent="." groups=["shuriken"]]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_okhn0")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="animation_finished" from="ShurikenPronta" to="." method="_on_shuriken_pronta_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
